# Howl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: architecture.md  classes.md  documentation.html  index.html  internals.md  sequences.md  style.css
packaging/: howl.desktop
src/app/: CMakeLists.txt  Main.cpp
src/core/: LockFreeQueue.h  MidiEvent.h  Types.h
src/dsp/: BuiltInEffectFactory.cpp  BuiltInEffectFactory.h  CMakeLists.txt  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  EnvelopeFollower.h  Equalizer.cpp  Equalizer.h  GainEffect.cpp  GainEffect.h  Limiter.cpp  Limiter.h  OfflineStretcher.cpp  OfflineStretcher.h  Reverb.cpp  Reverb.h  SamplerInstrument.cpp  SamplerInstrument.h  SubtractiveSynth.cpp  SubtractiveSynth.h
src/engine/: AudioTrack.cpp  AudioTrack.h  CMakeLists.txt  Effect.h  EffectChain.cpp  EffectChain.h  EffectFactory.h  Graph.cpp  Graph.h  Instrument.h  Meter.h  Metronome.h  Node.h  Transport.cpp  Transport.h
src/host/: CMakeLists.txt  Main.cpp
src/io/: AudioDevice.cpp  AudioDevice.h  AudioFile.cpp  AudioFile.h  CMakeLists.txt  MidiInputHub.cpp  MidiInputHub.h
src/model/: Arrangement.cpp  Arrangement.h  ArrangementNode.cpp  ArrangementNode.h  AudioClip.cpp  AudioClip.h  AudioTrackRenderer.cpp  AudioTrackRenderer.h  AutomationLane.cpp  AutomationLane.h  CMakeLists.txt  ChannelStrip.cpp  ChannelStrip.h  Command.h  CommandStack.cpp  CommandStack.h  Commands.cpp  Commands.h  MidiClip.cpp  MidiClip.h  MidiFileImport.cpp  MidiFileImport.h  MidiTrackRenderer.cpp  MidiTrackRenderer.h  Mixer.cpp  Mixer.h  Note.h  OfflineRenderer.cpp  OfflineRenderer.h  Pattern.cpp  Pattern.h  PreviewPlayer.cpp  PreviewPlayer.h  SequencerNode.cpp  SequencerNode.h  Session.cpp  Session.h  SessionTrackPlayer.cpp  SessionTrackPlayer.h  SnapGrid.h  (+2 more)
src/plugins/: CMakeLists.txt  ClapAdapter.cpp  ClapAdapter.h  IPluginInstance.h  PluginDescriptor.h  PluginEffect.cpp  PluginEffect.h  PluginHost.cpp  PluginHost.h  PluginInstrument.cpp  PluginInstrument.h  SandboxedPluginInstance.cpp  SandboxedPluginInstance.h  ShmAudioChannel.cpp  ShmAudioChannel.h  Vst3Adapter.cpp  Vst3Adapter.h
src/project/: CMakeLists.txt  ProjectSerializer.cpp  ProjectSerializer.h
src/ui/: ArrangeView.cpp  ArrangeView.h  AutomationEditor.cpp  AutomationEditor.h  BrowserFileTypes.h  BrowserResizerBar.h  CMakeLists.txt  ChannelRackPanel.cpp  ChannelRackPanel.h  ChannelStripComponent.cpp  ChannelStripComponent.h  EditTool.h  EffectEditorWindow.cpp  EffectEditorWindow.h  FileBrowserPanel.cpp  FileBrowserPanel.h  HowlLookAndFeel.cpp  HowlLookAndFeel.h  MainComponent.cpp  MainComponent.h  MixerView.cpp  MixerView.h  NotePreview.h  PianoRoll.cpp  PianoRoll.h  PianoRollWindow.cpp  PianoRollWindow.h  PluginWindow.cpp  PluginWindow.h  SessionView.cpp  SessionView.h  Theme.h  TrackHeaderPanel.cpp  TrackHeaderPanel.h  TransportBar.cpp  TransportBar.h
tests/: ArrangementNodeTests.cpp  ArrangementTests.cpp  AudioClipCommandTests.cpp  AudioClipTests.cpp  AudioClipWarpTests.cpp  AudioTrackRendererTests.cpp  AudioTrackTests.cpp  AutomationLaneTests.cpp  AutomationPlaybackTests.cpp  CMakeLists.txt  ChannelStripTests.cpp  ClapAdapterTests.cpp  ClipEditCommandTests.cpp  CommandStackTests.cpp  CompressorTests.cpp  DelayTests.cpp  EffectChainTests.cpp  EffectFactoryTests.cpp  EffectParameterTests.cpp  EqualizerTests.cpp  GoldenRenderTests.cpp  GraphTests.cpp  LimiterTests.cpp  LiveMidiInputTests.cpp  MeterTests.cpp  MetronomeTests.cpp  MidiClipTests.cpp  MidiFileImportTests.cpp  MidiTrackRendererTests.cpp  MixerBypassTests.cpp  MixerCommandTests.cpp  MixerPdcTests.cpp  MixerTests.cpp  NoteCommandTests.cpp  OfflineStretcherTests.cpp  PatternPlaybackTests.cpp  PatternTests.cpp  PluginEffectTests.cpp  PluginHostTests.cpp  PluginInstrumentTests.cpp  (+15 more)
